--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/icon": "2.1.0",
     "@nuxt/image": "1.11.0",
     "@nuxtjs/seo": "3.2.2",
+    "@vueuse/core": "^14.0.0",
     "nuxt": "^4.2.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
