--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,10 @@ jobs:
           node-version: "18" # Assurez-vous que c'est votre version de Node
           cache: 'pnpm' # Indique à setup-node de mettre en cache les dépendances pnpm
 
+
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
       # ÉTAPE MODIFIÉE : Utilisation de pnpm install
       - name: Install dependencies
         run: pnpm install
