--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,16 +28,24 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18" # Assurez-vous que c'est votre version de Node
+          node-version: "22" # Assurez-vous que c'est votre version de Node
           cache: 'pnpm' # Indique à setup-node de mettre en cache les dépendances pnpm
 
 
       - name: Install build dependencies
         run: sudo apt-get update && sudo apt-get install -y build-essential
+          
+          # AJOUTÉ : Vide le cache au cas où il y aurait des binaires M1 corrompus
+      - name: Clear pnpm store
+        run: pnpm store prune
 
-      # ÉTAPE MODIFIÉE : Utilisation de pnpm install
-      - name: Install dependencies
-        run: pnpm install
+          # MODIFIÉ : Installe sans exécuter les scripts de post-installation
+      - name: Install dependencies (ignore scripts)
+        run: pnpm install --ignore-scripts
+
+          # AJOUTÉ : Recompile les dépendances natives (sharp, etc.)
+      - name: Rebuild native dependencies
+        run: pnpm rebuild
 
       # ÉTAPE MODIFIÉE : Utilisation de pnpm generate
       - name: Static generation
