--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
         env: # <--- AJOUTEZ CECI
           NODE_OPTIONS: --openssl-legacy-provider
           NUXT_PUBLIC_SITE_URL: https://${{ github.repository_owner }}.github.io/tncaetfils
+          NUXT_APP_BASE_URL: /tncaetfils/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
